--- a/src/index.html
+++ b/src/index.html
@@ -8,69 +8,97 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg shadow mb-2">
-      <div class="container-fluid text-center">
-        <a class="navbar-brand" href="#">Alkic Consulting</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-lg-5 text-center">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
-                >Live Online PMP Classes</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Scrum Master Class</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle active"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                More
-              </a>
-              <ul
-                class="dropdown-menu text-center"
-                aria-labelledby="navbarDropdown"
-              >
-                <li><a class="dropdown-item" href="#">Courses</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Groups</a>
-                </li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Video Tutorials</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-          <button id="theme-toggle" class="btn btn-primary">
-            Toggle Theme
+    <header>
+      <nav class="navbar navbar-expand-lg shadow pb-2 mb-3 fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Alkic Consulting</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
           </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0 me-lg-4 text-center">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./pages/pmp-page.html"
+                  >Live Online PMP Classes</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Scrum Master Class</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle active"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  More
+                </a>
+                <ul
+                  class="dropdown-menu text-center"
+                  aria-labelledby="navbarDropdown"
+                >
+                  <li><a class="dropdown-item" href="#">Courses</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Groups</a>
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Video Tutorials</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            <button class="btn btn-outline-primary" type="submit">
+              <span class="btn-text-one fs-6 text-white">Contact</span
+              ><span class="btn-text-two fs-6 text-white">Welcome</span>
+            </button>
+            <label class="form-check form-switch ms-3" id="theme-toggle">
+              <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+            </label>
+          </div>
         </div>
-      </div>
-    </nav>
-    <div class="container">
-      <h1>Welcome to My Website</h1>
-      <p>This is some example text.</p>
-    </div>
+      </nav>
+    </header>
+    <main>
+      <div class="container mt-5">
+        <div class="row align-items-center">
+          <div class="col-sm-6 mt-5 text-center 5 animate__animated animate__slideInDown">
+            <h1 class="mt-5">
+              Embark on a transformative learning journey with <br />
+              <span class="font-weight-bold text-uppercase"
+                >ALKIC Consulting</span
+              >
+              <br />
+              and become a sought-after expert in project management.
+            </h1>
+            <div class="col justify-content-center">
+              <button class="btn mt-3 mt-sm-4 text-light me-3">Explore</button>
+              <button class="btn mt-3 mt-sm-4 text-light">Contact</button>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <img class="body-img animate__animated animate__slideInUp" src="./imgs/bg-img.svg" alt="">
+          </div>
+        </div>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
